Bug 399772 - Free space is not correctly recalculated when resizing LVM LVs
Summary: Free space is not correctly recalculated when resizing LVM LVs
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: Git
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-10-13 21:40 UTC by Andrius Štikonas
Modified: 2018-10-19 22:26 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Andrius Štikonas 2018-10-13 21:40:27 UTC
STEPS TO REPRODUCE
1. Resize LVM LV that is not the last one


OBSERVED RESULT
Unallocated space does not change


EXPECTED RESULT
Unallocated space is adjusted
Comment 1 Andrius Štikonas 2018-10-13 22:24:45 UTC
Looks like for LVM Device m_freePE is not updated in the resize operation.
Comment 2 Andrius Štikonas 2018-10-13 23:03:17 UTC
Git commit 3e31ec1431a45029c5050746012066e1b1101b57 by Andrius Štikonas.
Committed on 13/10/2018 at 23:02.
Pushed by stikonas into branch 'master'.

Fix free space handling when resizing LVM LVs.

M  +5    -0    src/core/lvmdevice.cpp
M  +1    -0    src/core/lvmdevice.h
M  +11   -1    src/ops/resizeoperation.cpp

https://commits.kde.org/kpmcore/3e31ec1431a45029c5050746012066e1b1101b57
Comment 3 Andrius Štikonas 2018-10-19 22:26:13 UTC
Git commit b06af11357a57bc582e3ee571053a0bd5f070028 by Andrius Štikonas.
Committed on 19/10/2018 at 18:55.
Pushed by stikonas into branch 'master'.

Fix free space handling with LVM LVs.

The previous commit worked for resizing LVM.
However, it is better to do special handling of LVMs in
insert/removePreviewPartition.

M  +12   -1    src/ops/operation.cpp
M  +0    -10   src/ops/resizeoperation.cpp

https://commits.kde.org/kpmcore/b06af11357a57bc582e3ee571053a0bd5f070028