Fix free space handling when resizing LVM LVs.

BUG: 399772