src/core/lvmdevice.cpp
@@ -545,6 +545,11 @@ qint64 LvmDevice::freePE() const
     return d_ptr->m_freePE;
 }
 
+void LvmDevice::setFreePE(qint64 freePE) const
+{
+    d_ptr->m_freePE = freePE;
+}
+
 QString LvmDevice::UUID() const
 {
     return d_ptr->m_UUID;
